...
        let species: String
        let gender: Character.Gender
    }

    private let all: [Character] = {
        let seeds = [
            Seed(name: "Rick Sanchez", status: .alive, species: "Human", gender: .male),
            Seed(name: "Morty Smith", status: .alive, species: "Human", gender: .male),
            Seed(name: "Summer Smith", status: .alive, species: "Human", gender: .female),
            Seed(name: "Beth Smith", status: .alive, species: "Human", gender: .female),
            Seed(name: "Jerry Smith", status: .alive, species: "Human", gender: .male),
            Seed(name: "Abadango Cluster Princess", status: .alive, species: "Alien", gender: .female),
            Seed(name: "Bird Person", status: .dead, species: "Alien", gender: .male),
...
            Seed(name: "Unity", status: .unknown, species: "Alien", gender: .genderless),
            Seed(name: "Noob-Noob", status: .alive, species: "Humanoid", gender: .male),
            Seed(name: "Evil Morty", status: .alive, species: "Human", gender: .male),
            Seed(name: "Pickle Rick", status: .alive, species: "Human", gender: .male),
            Seed(name: "Mr. Poopybutthole", status: .alive, species: "Poopybutthole", gender: .male),
            Seed(name: "Jaguar", status: .alive, species: "Human", gender: .male),
            Seed(name: "Supernova", status: .alive, species: "Alien", gender: .female),
            Seed(name: "Vance Maximus", status: .dead, species: "Human", gender: .male),
            Seed(name: "Million Ants", status: .dead, species: "Animal", gender: .genderless),
            Seed(name: "Glootie", status: .alive, species: "Alien", gender: .male),
            Seed(name: "Birdperson's Wife", status: .unknown, species: "Alien", gender: .female),
        ]

...
